# gemini-sync

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  changes.md  dev.db  docker-compose.yml  docs_evidence.md  llm.txt  pyproject.toml  risk_tier.md  task.md  test_evidence.md
.agent/: risk_policy.yaml  tool_policy.yaml
.github/: pull_request_template.md
connectors/: examples-allowlist.txt  hr-employees.yaml  hr-file-csv.yaml  kb-rest.yaml  oracle-employees.yaml  support-push.yaml
docs/: api-reference.mdx  architecture.md  changelog.mdx  connector-authoring.md  connector-field-reference.md  connector-mode-file-pull.md  connector-mode-rest-pull.md  connector-mode-rest-push.md  connector-mode-sql-pull.md  connector-provider-file.md  connector-provider-future.md  connector-provider-http.md  connector-provider-mssql.md  connector-provider-mysql.md  connector-provider-oracle.md  connector-provider-postgres.md  connector-studio.md  discovery-engine-cli-playbook.md  doc_sync_map.yaml  getting-started-local.md  getting-started-local.mdx  load-testing.md  migration-custom-connectors.md  operations-runbook.md  reliability-phase.md  roadmap.md  roadmap.mdx  splunk-dashboard-queries.md  start-here.md  start-here.mdx  troubleshooting.md
evals/: baseline.json  eval_registry.yaml
flows/: hr-employees-sync.yaml  kb-rest-sync.yaml  support-push-process.yaml
gemini_sync_bridge/: __init__.py  api.py  cli.py  connector_loader.py  db.py  init_db.py  models.py  ops_schemas.py  quality_gates.py  schemas.py  settings.py  studio_schemas.py
(+230 files in other folders)
